--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "@dlillyatx/scaffold",
   "version": "0.1.19",
   "description": "scaffold",
+  "repository": "https://github.com/dlilly/scaffold",
+  "author": "commercetools",
+  "license": "MIT",
   "watch": {
     "dev": "src"
   },
@@ -15,57 +18,17 @@
     "node",
     "microservices"
   ],
-  "author": "commercetools",
-  "license": "MIT",
-  "repository": "",
-  "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "eslint": "^4.15.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jest": "^23.8.2",
-    "jest": "^22.1.1",
-    "lint-staged": "^6.0.1",
-    "prettier": "^1.10.2",
-    "prettier-eslint-cli": "^4.7.1",
-    "validate-commit": "^3.4.0"
-  },
   "dependencies": {
     "@google-cloud/pubsub": "^1.6.0",
     "app-root-path": "^3.0.0",
-    "async-lodash": "^1.0.9",
     "body-parser": "^1.19.0",
-    "clean-deep": "^3.3.0",
     "cors": "^2.8.5",
-    "cross-env": "^5.1.3",
-    "ctvault": "^1.0.32",
+    "ctvault": "^1.0.33",
     "express": "^4.17.1",
-    "firebase-admin": "^8.11.0",
     "fs-extra": "^8.1.0",
     "locale-code": "^2.0.2",
     "lodash": "^4.17.20",
     "nconf": "^0.10.0",
-    "pluralize": "^8.0.0",
-    "request-promise": "^4.2.6",
-    "slugify": "^1.4.0"
-  },
-  "jest": {
-    "rootDir": "src",
-    "collectCoverage": true,
-    "coverageReporters": [
-      "lcov",
-      "text-summary"
-    ],
-    "coverageDirectory": "../coverage",
-    "collectCoverageFrom": [
-      "services/**/*.js"
-    ],
-    "testEnvironment": "node"
-  },
-  "lint-staged": {
-    "src/**/*.{js,json}": [
-      "prettier-eslint --write",
-      "git add"
-    ]
+    "pluralize": "^8.0.0"
   }
 }
