--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
     "microservices"
   ],
   "dependencies": {
+    "@apollo/federation": "^0.20.4",
     "@google-cloud/pubsub": "^1.6.0",
+    "apollo-server": "^2.18.2",
+    "apollo-server-express": "^2.18.2",
     "app-root-path": "^3.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "ctvault": "^1.0.34",
     "express": "^4.17.1",
     "fs-extra": "^8.1.0",
+    "graphql-tools": "^6.2.4",
     "locale-code": "^2.0.2",
     "lodash": "^4.17.20",
     "nconf": "^0.10.0",
