--- a/package.json
+++ b/package.json
@@ -26,12 +26,16 @@
     "app-root-path": "^3.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "ctvault": "^2.0.0",
     "express": "^4.17.1",
     "fs-extra": "^8.1.0",
     "graphql-tools": "^6.2.4",
     "locale-code": "^2.0.2",
     "lodash": "^4.17.20",
     "nconf": "^0.10.0",
-    "pluralize": "^8.0.0"
+    "node-fetch": "^2.6.1",
+    "pluralize": "^8.0.0",
+    "pubsub-js": "^1.9.1",
+    "tslib": "^2.0.3"
   }
 }
