--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "app-root-path": "^3.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "ctvault": "^2.0.0",
+    "ctvault": "^2.0.3",
     "express": "^4.17.1",
+    "faker": "^5.1.0",
     "fs-extra": "^8.1.0",
     "graphql-tools": "^6.2.4",
     "locale-code": "^2.0.2",
@@ -36,6 +37,7 @@
     "node-fetch": "^2.6.1",
     "pluralize": "^8.0.0",
     "pubsub-js": "^1.9.1",
-    "tslib": "^2.0.3"
+    "tslib": "^2.0.3",
+    "uuid": "^8.3.1"
   }
 }
